# rescuetime-mcp

./: .env.example  .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
src/rescuetime_mcp/: __init__.py  client.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_integration.py  test_server.py
